--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,9 +12,9 @@
 }
         /* header section  */
 .header{
-background-color: rgb(242, 219, 189);
-grid-column: 2 / 3;
-grid-row: 1 / 2;
+    background-color: rgb(242, 219, 189);
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
 }
 
 
@@ -41,8 +41,23 @@ grid-row: 1 / 2;
     background-color: rgb(34, 43, 40);
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+
+    display: grid;
+    grid-template-rows: repeat(7, 1fr);
+    gap: 10px;
 }
 
+.sidebar a{
+    font-size: 15px;
+    color: white;
+
+}
+
+.sidebar .fa{
+    font-size: 20px;
+    background-color: transparent;
+    padding: 4px;
+}
 
                 /* main section */
 .main{
@@ -50,13 +65,12 @@ grid-row: 1 / 2;
     padding: 20px;
     grid-column: 2 / 3;
     grid-row-start: 2 / 3;
+    gap: 10px;
 
 
     display: grid;
     grid-template-columns: 1fr 1fr 2fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 10px;
-}
+    grid-template-rows: 1fr 1fr 1fr;}
 
 .fa-hand-paper-o{
     font-size:25px;
@@ -98,7 +112,7 @@ grid-row: 1 / 2;
 }
 
 .sales{
-    font-wegiht: bold;
+    font-weight: bold;
     opacity: 0.5;
     font-size: 15px;
 }
@@ -148,6 +162,7 @@ grid-row: 1 / 2;
 .four{
     grid-column: 3 / 4;
     grid-row: 2 /3;
+
 }
 
 .five{
