--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,48 +1,73 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-.container{
-    display: grid;
-    grid-template-columns: 200px 2fr;
-    grid-template-rows:  1fr;
-}
-
-.navbars{
+body{
     display: flex;
-    justify-content: space-between; 
-    margin: 10px;
-    padding: 5px;
-    background-color: aquamarine;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #222;
 }
 
-.navs{
-    display: flex;
-    justify-content: space-between;
-}
-.item{
-    background-color: whitesmoke;
-    padding: 20px;
-    margin: 10px;
-}
-
-.bars{
-    margin: 10px;
+.grid-container{
     position: relative;
-    top: 35px;
-    left: 50px;
+    width: 600px;
+    display: grid;
+    gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 150px 150px 150px 150px;
+    grid-template-areas: "img1 img3 img4"
+                          "img1 img3 img5"
+                          "img2 img3 img5"
+                          "img2 img6 img6";
+
 }
 
-.fa{
-    font-size: 30px;
-    color: black;
+.img1{
+    grid-area: img1;
 }
 
+.img2{
+    grid-area: img2;
+}
 
-        /* aside bar */
+.img3{
+    grid-area: img3;
+}
 
-.aside{
-    background-color: blueviolet;
-    wi
+.img4{
+    grid-area: img4;
+}
+
+.img5{
+    grid-area: img5;
+}
+
+.img6{
+    grid-area: img6;
+}
+
+.item{
+    position: relative;
+    background: white;
+    border-radius: 10px;
+}
+
+.item img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.grid-container:hover .item img:not(:hover){
+    opacity: 1;
+    filter: grayscale(1);
 }
