--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,14 +15,12 @@
     background-color: rgb(242, 219, 189);
     grid-column: 2 / 3;
     grid-row: 1 / 2;
-}
 
-
-.header{
     display: flex;
     justify-content: flex-end;
     padding: 10px;
 }
+
 
 .nav a{
     margin: 20px;
@@ -45,12 +43,12 @@
     display: grid;
     grid-template-rows: repeat(7, 1fr);
     gap: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
 .sidebar a{
-    font-size: 15px;
     color: white;
-
 }
 
 .sidebar .fa{
